--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 600px) {
+  #mobile {
+    font-size: 1em;
+  }
+}
+
 .line {
   color: red;
   text-decoration: line-through;
